Updated the CSS to prevent overlapping navigation bar, changed the color scheme

--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,46 @@
 body{
-  background: #111125;
-  color: #a0a0a0;
+	--color-4: #363434;
+	--color-2: #efecec;
+	--color-3: #5c5757;
+	--color-1: #62929a;
+  background: var(--color-1);
+  color: var(--color-2);
   font-family: "Suravaram", serif;
   font-size: 18px;
   cursor: default;
+  user-select: none;  user-select: none;
+
 }
 
+::selection { background: transparent; } 
+::-moz-selection { background: transparent; }
 
 hr{
-  border-color: #a0a0a0;
+  border-color: var(--color-2);
 }
 
 .title{
-  color: #a8a8a8;
+  color: var(--color-2);
   text-align: center;
-  font-size: 220%;
-  margin: 20px;
+  font-size: 4vw;
+  margin: 4%;
   height: 50px;
 }
 
 #page-container{
   width: 95%;
-  margin-top: 40px;
-}
+  margin-top: 5%;
+}<hr>
 
 .row{
   margin-bottom: 20px;
 }
 
 .article-box{
-  background: #2f2f2f;
-  color: #a8a8a8;
+  background: var(--color-4);
+  color: var(--color-2);
   border-style: solid;
-  border-color: #a0a2a9;
+  border-color: var(--color-3);
   margin-bottom: 10%;
   border-radius: 1%;
   padding: 5%;
@@ -56,7 +64,7 @@ hr{
   text-align: center;
   font-size: 130%;
   height: 45%;
-  overflow: hidden;
+  z-index: 4;
 }
 
 .article-source{
@@ -67,7 +75,7 @@ hr{
 .image-box{
   
   background-image: url("");
-  background: #0a0a0a;
+  background: var(--color-2);
   background-size: contain;
   margin: auto;
   border-radius: 5%;
@@ -95,8 +103,7 @@ hr{
   top: 0%;
   background: RGBA(10, 10, 10, 60%);
   height: 30px;
-  white-space: nowrap;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 #searchbox{
@@ -139,7 +146,8 @@ hr{
 
 
 .sourcedate-frame{
-  height: 30%;
+  height: 20%;
+  z-index: 2;
 }
 
 #destination-list{
@@ -150,7 +158,7 @@ hr{
   top: 0;
   overflow-x: auto;
   overflow-y: hidden;
-  max-width: 75%;
+  height: 99%;
   }
 
 
@@ -167,10 +175,12 @@ destination:hover{
 }
 
 .navbar{
-  position: absolute;
-  top: -1px;
-  right: 0;
+  overflow-x: auto;
+  overflow-y: hidden;
   color: #666;
+  position: relative;
+  top: -5px;
+  right: 0px;
 }
 
 #set-location{
